# schedule-sharing

./: .gitignore  README.md
backend/: .env  README.md  docker-compose.yml  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20dd6bfe4a45_create_users.py  7e8043bb18ab_change_user.py
backend/app/: main.py
backend/app/api/routers/: signUpRouter.py
backend/app/core/: config.py  db.py  deps.py  firebase.py
backend/app/db/: session.py
backend/app/middleware/: firebaseAuthMiddleware.py
backend/app/models/: user.py
backend/app/repositories/: signUpRepository.py
backend/app/schemas/: signUpSchema.py  userSchema.py
backend/app/services/: signUpService.py
backend/tests/: test_health.py
frontend/: README.md  biome.json  index.html  package.json  pnpm-lock.yaml  router.tsx  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: signup.ts
frontend/src/components/: InputForm.tsx
frontend/src/components/ui/: button.tsx  input.tsx
frontend/src/features/signup/: SignUp.tsx  useSignUpHook.tsx
frontend/src/interface/: signup.ts
frontend/src/lib/: firebase.ts
frontend/src/screens/: SignUpScreen.tsx
frontend/src/types/: signup.ts
